# Simple-Agent-App

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
app/Models/: gigachat_model.py
app/Nodes/: joke_nodes.py
app/States/: joke_state.py
app/Workflows/: joke_workflow.py
app/api/: simple_api.py
