[project]
name = "agents-example"
version = "0.1.0"
description = ""
authors = [
    {name = "fedor",email = "shadaevf@mail.ru"}
]
readme = "README.md"
requires-python = "<4.0, >=3.11"
dependencies = [
    "dotenv (>=0.9.9,<0.10.0)",
    "langchain-gigachat (>=0.3.10,<0.4.0)",
    "langgraph (>=0.4.0,<0.5.0)",
    "pydantic (>=2.11.4,<3.0.0)",
    "ipython (>=9.2.0,<10.0.0)",
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn (>=0.34.2,<0.35.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
